--- a/my-website/src/data/projects.json
+++ b/my-website/src/data/projects.json
@@ -3,12 +3,16 @@
     "title": "A*Snake",
     "image": "/projects/snake/preview.png",
     "link": "/projects/snake/index.html",
-    "mode": "arcade"
+    "mode": "arcade",
+    "version": "v1.2",
+    "size": "128KB"
   },
   {
     "title": "RGB Crystal Simulator",
     "image": "/projects/rgb-crystal/preview.png",
     "link": "/projects/rgb-crystal/index.html",
-    "mode": "adaptive"
+    "mode": "adaptive",
+    "version": "v0.9",
+    "size": "2.4MB"
   }
 ]
