preview and project

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -8,9 +8,9 @@
     "size": "128KB"
   },
   {
-    "title": "RGB Crystal Simulator",
-    "image": "/projects/rgb-crystal/preview.png",
-    "link": "/projects/rgb-crystal/index.html",
+    "title": "Parcer Place",
+    "image": "/projects/parcer-place/preview.png",
+    "link": "/projects/parcer-place/index.html",
     "mode": "adaptive",
     "version": "v0.9",
     "size": "2.4MB"
