--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -9,8 +9,8 @@
   },
   {
     "title": "Parcer Place",
-    "image": "/projects/parcer_place/preview.png",
-    "link": "/projects/parcer_place/index.html",
+    "image": "/projects/place/preview.png",
+    "link": "/projects/place/index.html",
     "mode": "adaptive",
     "version": "v0.9",
     "size": "2.4MB"
