--- a/src/projects/projects.json
+++ b/src/projects/projects.json
@@ -3,14 +3,14 @@
     "title": "A*Snake",
     "image": "/projects/snake/preview.png",
     "link": "/projects/snake/index.html",
-    "mode": "arcade",
+    "mode": "adaptive",
     "version": "v1.2",
     "size": "128KB"
   },
   {
     "title": "Parcer Place",
-    "image": "/projects/parcer_place/preview.png",
-    "link": "/projects/parcer_place/index.html",
+    "image": "/projects/place/preview.png",
+    "link": "/projects/place/index.html",
     "mode": "adaptive",
     "version": "v0.9",
     "size": "2.4MB"
