--- a/src/projects/projects.json
+++ b/src/projects/projects.json
@@ -5,14 +5,22 @@
     "link": "/projects/snake/index.html",
     "mode": "adaptive",
     "version": "v1.2",
-    "size": "128KB"
+    "size": "7.22 MB"
   },
   {
     "title": "Parcer Place",
     "image": "/projects/place/preview.png",
     "link": "/projects/place/index.html",
     "mode": "adaptive",
-    "version": "v0.9",
-    "size": "2.4MB"
+    "version": "v1.9",
+    "size": "8.85 MB"
+  },
+  {
+    "title": "Chestris",
+    "image": "/projects/chestris/preview.png",
+    "link": "/projects/chestris/index.html",
+    "mode": "arcade",
+    "version": "v1.0",
+    "size": "8.18MB"
   }
 ]
